    [+] Added DynamicSideWidgetWrapper::currentWidget() and DynamicSideWidgetWrapper::comboBoxStyle().
    [+] Added ProxyAction::unregisterContext() and IActionManager::unregisterCommandsForContext().
    [+] Added ModeManager::activeModeChanged(), ModeManager::switchToPreviousMode(), ModeManager::previousModeIDs() and ModeManager::switchToPreviousModeAction().

    [#] LoggerGui's widget logger engine creation functions got new parameter allowing you to specify which message displays
        must be shown in the widget logger engine.
    [#] It is no longer needed to enable categorized display in order to display category column in ObserverWidget in TableView mode.
    [#] CodeEditorWidget uses a bigger font by default on Linux.
    [#] Logger::detachLoggerEngine() got a new delete_engine parameter.
    [#] AbstractTreeItem::setSizeHint() will first validate the QSize property to be set before setting it.
    [#] ConfigurationWidget now uses a splitter in its layout.
    [#] ObjectPropertyBrowser::eventFilter() no longer sets the object's modification state when a property changes.
    [#] Added & character in front of menu item text in QtilitiesCoreGuiConstants.
    [#] StringListWidget will stay sorted now when adding/removing items etc.
    [#] WidgetLoggerEngine::isFormattingEngineConstant() now returns false.
    [#] Observer models will now use the name of the observer context being shown in the name column's header if the
        observer does not have a SubjectTypeFilter installed which explicitly provides a name for the objects
        in the observer. Previously you had to install a SubjectTypeFilter just to change the text in the header.
    [#] ObjectDynamicPropertyBrowser will now list properties in alphabetical order.
    [#] ObjectDynamicPropertyBrowser will now resize columns to their contents when in TreeBrowser mode.
    [#] Sorting of file names is not case sensitive anymore in Observer models.