@@ -117,6 +117,8 @@ For comment, queries or bug reports please get in touch.
 - Qtilities::CoreGui::TaskManagerGui::getWidgetLoggerEngineDisplaysFlag()
 - Qtilities::CoreGui::TaskManagerGui::setWidgetLoggerEngineDisplaysFlag()
 
+- Qtilities::CoreGui::QtilitiesMainWindow::lastReadSettingsIsMaximized()
+
 \subsection Qtilities::ProjectManagement
 
 - Qtilities::ProjectManagement::ProjectManager::setUseProjectFileLocks()
